--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
     "pg": "^8.11.3",
     "winston": "^3.11.0"
   },
